--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -576,8 +576,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                     <barButtonItem image="comment button" id="LaY-nj-dbF" userLabel="Comment">
                                         <color key="tintColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <action selector="commentButtonTapped:" destination="5ig-UZ-aRR" id="6YY-zA-Yka"/>
-                                            <segue destination="3UN-Xj-WqC" kind="presentation" identifier="toComments" id="JbV-cC-xrb"/>
+                                            <segue destination="3UN-Xj-WqC" kind="show" identifier="toComments" id="2uJ-4F-XW4"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="qfw-km-pLb"/>
@@ -656,33 +655,26 @@ If you have concerns about the way Peek is handling your Information, please let
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.25879135727882385" green="0.2588421106338501" blue="0.25878816843032837" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" rowHeight="75" id="4bM-Mm-bY4" customClass="CommentTableViewCell" customModule="Peek" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" textLabel="KkI-O0-oz9" rowHeight="75" style="IBUITableViewCellStyleDefault" id="9XU-7U-QL3" customClass="CommentTableViewCell" customModule="Peek" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4bM-Mm-bY4" id="TgM-ym-aHU">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9XU-7U-QL3" id="cM0-ni-0Sq">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VEk-ja-IEK">
-                                            <rect key="frame" x="8" y="8" width="359" height="58"/>
-                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KkI-O0-oz9">
+                                            <rect key="frame" x="15" y="0.0" width="345" height="74"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="VEk-ja-IEK" secondAttribute="bottom" id="AUg-6q-jSo"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="VEk-ja-IEK" secondAttribute="trailing" id="Pih-VP-8v4"/>
-                                        <constraint firstItem="VEk-ja-IEK" firstAttribute="leading" secondItem="TgM-ym-aHU" secondAttribute="leadingMargin" id="QCa-d7-7Ws"/>
-                                        <constraint firstItem="VEk-ja-IEK" firstAttribute="top" secondItem="TgM-ym-aHU" secondAttribute="topMargin" id="iNE-m4-sq0"/>
-                                    </constraints>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.25879135727882385" green="0.2588421106338501" blue="0.25878816843032837" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <connections>
-                                    <outlet property="commentTextLabel" destination="VEk-ja-IEK" id="WVm-gB-oEp"/>
-                                </connections>
+                                <color key="backgroundColor" red="0.25879135730000002" green="0.25884211060000001" blue="0.25878816840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="vpC-iT-NqJ" id="I4G-Bw-Edd"/>
                             <outlet property="delegate" destination="vpC-iT-NqJ" id="WcH-yd-NZO"/>
