--- a/Peek/Base.lproj/LaunchScreen.storyboard
+++ b/Peek/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,13 +21,27 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.94366671954314718" green="0.94366671954314718" blue="0.94366671954314718" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="peek icon with text" translatesAutoresizingMaskIntoConstraints="NO" id="o6Y-O0-uZZ">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="o6Y-O0-uZZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0lN-JY-w9d"/>
+                            <constraint firstItem="o6Y-O0-uZZ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="205" id="QTR-wI-VEV"/>
+                            <constraint firstItem="o6Y-O0-uZZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ZOi-qU-YJl"/>
+                            <constraint firstItem="o6Y-O0-uZZ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="51" id="rYf-IO-uhi"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="K8b-ll-HDn"/>
+                    <navigationItem key="navigationItem" id="u0V-Rn-37q"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2869.5999999999999" y="374.66266866566718"/>
+            <point key="canvasLocation" x="3808.8000000000002" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="peek icon with text" width="374" height="138"/>
+    </resources>
 </document>
