--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -688,7 +688,7 @@ If you have concerns about the way Peek is handling your Information, please let
         <scene sceneID="Nqi-jn-3d0">
             <objects>
                 <tableViewController storyboardIdentifier="CommentsTableViewController" id="vpC-iT-NqJ" customClass="CommentsTableViewController" customModule="Peek" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="59" sectionHeaderHeight="18" sectionFooterHeight="18" id="Yi9-zp-Mza">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="72" sectionHeaderHeight="18" sectionFooterHeight="18" id="Yi9-zp-Mza">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -729,22 +729,22 @@ If you have concerns about the way Peek is handling your Information, please let
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" textLabel="KkI-O0-oz9" detailTextLabel="j5E-Qe-mUK" rowHeight="59" style="IBUITableViewCellStyleSubtitle" id="9XU-7U-QL3">
-                                <rect key="frame" x="0.0" y="100" width="375" height="59"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" textLabel="KkI-O0-oz9" detailTextLabel="j5E-Qe-mUK" rowHeight="72" style="IBUITableViewCellStyleSubtitle" id="9XU-7U-QL3">
+                                <rect key="frame" x="0.0" y="100" width="375" height="72"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9XU-7U-QL3" id="cM0-ni-0Sq">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="58"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KkI-O0-oz9">
-                                            <rect key="frame" x="15" y="11" width="30" height="21"/>
+                                            <rect key="frame" x="15" y="17" width="30" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j5E-Qe-mUK">
-                                            <rect key="frame" x="15" y="32" width="30" height="16"/>
+                                            <rect key="frame" x="15" y="38" width="30" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.52131583121827418" green="0.52131583121827418" blue="0.52131583121827418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -822,23 +822,10 @@ If you have concerns about the way Peek is handling your Information, please let
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection id="Shh-Y9-2Lm">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="72" id="dOi-DJ-2tk">
-                                        <rect key="frame" x="0.0" y="140" width="375" height="72"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dOi-DJ-2tk" id="QG0-qT-uLY">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="72"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
                             <tableViewSection id="lWl-w7-yqf">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="299" id="BBe-sb-YH9">
-                                        <rect key="frame" x="0.0" y="248" width="375" height="299"/>
+                                        <rect key="frame" x="0.0" y="140" width="375" height="299"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BBe-sb-YH9" id="g3V-EN-DCZ">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="299"/>
@@ -865,7 +852,7 @@ If you have concerns about the way Peek is handling your Information, please let
                             <tableViewSection id="Hzd-Fl-baZ">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="66" id="LII-WB-4FH">
-                                        <rect key="frame" x="0.0" y="583" width="375" height="66"/>
+                                        <rect key="frame" x="0.0" y="475" width="375" height="66"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LII-WB-4FH" id="SXS-w2-A4n">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="66"/>
@@ -1191,6 +1178,6 @@ Our Service allows you to post, upload images, share information, and otherwise 
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="qVz-1W-1ME"/>
-        <segue reference="CFH-SD-IWi"/>
+        <segue reference="RTB-sh-fD8"/>
     </inferredMetricsTieBreakers>
 </document>
